# JavaMicroDeFi

./: .gitignore  18TB_DISK_SETUP_GUIDE.md  API_DOCUMENTATION.md  BASIC_METRICS_SETUP.md  BITCOIN_METRICS_PIPELINE_SETUP.md  BITCOIN_NODE_SETUP.md  DASHBOARD_SUMMARY.md  ENHANCED_METRICS_DOCUMENTATION.md  ERIGON_BOTTLENECK_ANALYSIS.md  ERIGON_ETA_REPORT.md  ERIGON_SYNC_STATUS.md  ETHEREUM_PREDICTION_DATA_SOURCES.md  ETHEREUM_STACK_README.md  IO_OPTIMIZATION_GUIDE.md  JAVA21_MICROSERVICES_ARCHITECTURE.md  JAVA_MIGRATION_README.md  MULTI_CHAIN_SERVICE_EXPLANATION.md  OTTERSYNC_BOTTLENECK_ANALYSIS.md  README.md  RUST_MICROSERVICES_DASHBOARD.md  SSD_CACHE_ARCHITECTURE.md  SSD_CACHE_INTEGRATION_GUIDE.md  bitcoin-grafana-dashboard.json  bitcoin-metrics-docker-compose.yml  bitcoin-node-docker-compose.yml  bitcoin-rpc-nginx.conf  bitcoin-service-config.yml  bitcoin-simple-docker-compose.yml  check-erigon-sync.sh  check-ethereum-stack.sh  check-ethereum-sync-status.sh  configure-performance-server.sh  docker-compose-migrated.yml  docker-compose.yml  env.main~  ethereum-mainnet-full-stack.yml  ethereum-node-docker-compose.yml  lighthouse-progress.sh  logs-ethereum-stack.sh  metrics-system-architecture.md  (+32 more)
.cursor/rules/: my1.mdc
api-gateway/: Dockerfile  basic-jvm-metrics-dashboard.json  jvm-metrics-dashboard.json  pom.xml
bitcoin-metrics-service/: Dockerfile  pom.xml
blockchain-sync-service/: .env  BACKFILL_GUIDE.md  BACKFILL_RESULTS.md  Cargo.toml  Dockerfile  GRAFANA_DASHBOARDS.md  MONITORING_SETUP.md  README.md  backfill.sh  docker-compose.yml  env.example  simple-backfill.sh  simple_ethereum_collector.py
blockchain-sync-service/grafana/dashboards/: bitcoin-monitoring-dashboard.json  bitcoin-sync-dashboard.json  blockchain-sync-dashboard.json  ethereum-infrastructure-dashboard.json  micrometer-jvm-dashboard.json  microservices-health-dashboard.json  microservices-status-dashboard.json  rust-microservices-dashboard.json  simple-rust-dashboard.json  simple-test-dashboard.json  system-metrics-dashboard.json  test-dashboard.json  working-dashboard.json  working-rust-dashboard.json
blockchain-sync-service/grafana/provisioning/dashboards/: dashboards.yml
blockchain-sync-service/prometheus/: prometheus.yml
blockchain-sync-service/src/: blockchain.rs  error_handler.rs  ethereum_processor.rs  kafka_producer.rs  main.rs  metrics.rs  models.rs  mongodb_client.rs
data-aggregation-service/: Cargo.toml  Dockerfile
data-aggregation-service-java/: Dockerfile  pom.xml
data-aggregation-service/src/: aggregation.rs  data_service.rs  kafka_consumer.rs  main.rs  metrics.rs  models.rs  mongodb_client.rs
ethereum-full-archive/: docker-compose-external-rpc.yml  docker-compose-simple.yml  docker-compose.yml
ethereum-full-archive/erigon-config/: jwt.hex
ethereum-full-archive/lighthouse-config/: jwt.hex
ethereum-prediction-service/: Dockerfile  README.md  pom.xml
exchange-data-service/: Dockerfile  enhanced_ccxt_service.py  env.example  main.py  requirements.txt
linea-microservice/: ARCHITECTURE.md  Dockerfile  METRICS_AND_TESTING_SUMMARY.md  PERFORMANCE_COMPARISON.md  README.md  deploy-linea-group.sh  docker-compose-linea-group.yml  docker-compose-optimized.yml  docker-compose.yml  fix-linea-issues.sh  pom-optimized.xml  pom.xml  run-comprehensive-tests.sh  test-linea-microservice.sh
linea-microservice/pgadmin/: servers.json
math-computing-service/: Cargo.toml  Dockerfile
math-computing-service/src/: calculations.rs  kafka_consumer.rs  main.rs  math_service.rs  metrics.rs  models.rs
mongodb/: init-mongo.js
multi-chain-service/: Dockerfile  README.md  pom.xml
nginx/: nginx.conf
simple-rust-metrics-service/: Cargo.toml  Dockerfile
ssd-cache-service/: Dockerfile  docker-compose.yml  pom.xml
transaction-signing-service/: Cargo.toml  Dockerfile
transaction-signing-service/src/: crypto.rs  kafka_consumer.rs  main.rs  metrics.rs  models.rs  signing_service.rs
(+105 files in other folders)
