[package]
name = "blockchain-sync-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
mongodb = "2.8"
rdkafka = { version = "0.36", features = ["cmake-build"] }
web3 = "0.19"
ethabi = "18.0"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
env_logger = "0.10"
log = "0.4"
anyhow = "1.0"
futures = "0.3"
async-trait = "0.1"
clap = { version = "4.0", features = ["derive"] }

[dependencies.tokio-tungstenite]
version = "0.20"
features = ["native-tls"]
