[package]
name = "blockchain-sync-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
env_logger = "0.10"
prometheus = { version = "0.13", features = ["process"] }
hyper = { version = "0.14", features = ["full"] }