[package]
name = "data-aggregation-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rdkafka = { version = "0.36", features = ["cmake-build"] }
mongodb = "2.8"
futures = "0.3"
async-trait = "0.1"
env_logger = "0.10"
log = "0.4"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
tokio-stream = "0.1"

[dependencies.axum]
version = "0.7"
features = ["macros"]

[dependencies.tower]
version = "0.4"

[dependencies.tower-http]
version = "0.5"
features = ["cors"]

# For time series analysis
[dependencies.ta]
version = "0.5"

# For statistical calculations
[dependencies.statrs]
version = "0.16"
