[package]
name = "math-computing-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rdkafka = { version = "0.36", features = ["cmake-build"] }
nalgebra = "0.32"
statrs = "0.16"
rayon = "1.7"
env_logger = "0.10"
log = "0.4"
anyhow = "1.0"
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ndarray = "0.15"
num-traits = "0.2"
rand = "0.8"
rand_distr = "0.4"
prometheus = "0.13"

[dependencies.axum]
version = "0.7"
features = ["macros"]

[dependencies.tower]
version = "0.4"

[dependencies.tower-http]
version = "0.5"
features = ["cors"]

# For Black-Scholes and financial calculations
[dependencies.blackscholes]
version = "0.24"

# For optimization algorithms
[dependencies.argmin]
version = "0.8"
features = ["serde1"]
