[package]
name = "transaction-signing-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rdkafka = { version = "0.36", features = ["cmake-build"] }
web3 = "0.19"
secp256k1 = { version = "0.28", features = ["recovery", "rand-std"] }
rand = "0.8"
hex = "0.4"
sha3 = "0.10"
rlp = "0.5"
ethereum-types = "0.14"
env_logger = "0.10"
log = "0.4"
anyhow = "1.0"
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = "1.6"
prometheus = "0.13"

[dependencies.axum]
version = "0.7"
features = ["macros"]

[dependencies.tower]
version = "0.4"

[dependencies.tower-http]
version = "0.5"
features = ["cors"]
